// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Footer renders different Sizes 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-jEsDcK iDnTmX"
    >
      <div
        className="sc-kOZHUs eALEOy"
      >
        <div
          className="sc-chuuOD feVbyd"
        >
          <button
            className="sc-LoTwT kbJZWD"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-inRwDn gWiyjT"
            />
          </button>
        </div>
        <div
          className="sc-chuuOD feVbyd"
        >
          <button
            className="sc-LoTwT iErfKM"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-inRwDn gWiyjT"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-chuuOD feVbyd"
      >
        <button
          className="sc-LoTwT hhDSwm"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-inRwDn gWiyjT"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-jEsDcK hUXMeH"
      size="small"
    >
      <div
        className="sc-kOZHUs eALEOy"
      >
        <div
          className="sc-chuuOD feVbyd"
        >
          <button
            className="sc-LoTwT kKGdKa"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-inRwDn gWiyjT"
            />
          </button>
        </div>
        <div
          className="sc-chuuOD feVbyd"
        >
          <button
            className="sc-LoTwT doNUDN"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-inRwDn gWiyjT"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-chuuOD feVbyd"
      >
        <button
          className="sc-LoTwT crnskb"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-inRwDn gWiyjT"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog Footer renders with Button MD 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-jEsDcK krxMBR"
    >
      <div
        className="sc-kOZHUs eALEOy"
      >
        <div
          className="sc-chuuOD feVbyd"
        >
          <button
            className="sc-LoTwT kbJZWD"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-inRwDn gWiyjT"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-jEsDcK krxMBR"
    >
      <div
        className="sc-kOZHUs eALEOy"
      >
        <div
          className="sc-chuuOD feVbyd"
        >
          <button
            className="sc-LoTwT kbJZWD"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-inRwDn gWiyjT"
            />
          </button>
        </div>
        <div
          className="sc-chuuOD feVbyd"
        >
          <button
            className="sc-LoTwT iErfKM"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-inRwDn gWiyjT"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-jEsDcK krxMBR"
    >
      <div
        className="sc-kOZHUs eALEOy"
      >
        <div
          className="sc-chuuOD feVbyd"
        >
          <button
            className="sc-LoTwT kbJZWD"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-inRwDn gWiyjT"
            />
          </button>
        </div>
        <div
          className="sc-chuuOD feVbyd"
        >
          <button
            className="sc-LoTwT iErfKM"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-inRwDn gWiyjT"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-chuuOD feVbyd"
      >
        <button
          className="sc-LoTwT hhDSwm"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-inRwDn gWiyjT"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-jEsDcK krxMBR"
    >
      <div
        className="sc-kOZHUs eALEOy"
      >
        <div
          className="sc-chuuOD feVbyd"
        >
          <button
            className="sc-LoTwT kbJZWD"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-inRwDn gWiyjT"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-chuuOD feVbyd"
      >
        <button
          className="sc-LoTwT hhDSwm"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-inRwDn gWiyjT"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-jEsDcK krxMBR"
    >
      <div
        className="sc-kOZHUs eALEOy"
      >
        <div
          className="sc-chuuOD feVbyd"
        >
          <button
            className="sc-LoTwT iErfKM"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-inRwDn gWiyjT"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-jEsDcK krxMBR"
    >
      <div
        className="sc-kOZHUs eALEOy"
      >
        <div
          className="sc-chuuOD feVbyd"
        >
          <button
            className="sc-LoTwT iErfKM"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-inRwDn gWiyjT"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-chuuOD feVbyd"
      >
        <button
          className="sc-LoTwT hhDSwm"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-inRwDn gWiyjT"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;

exports[`Dialog Footer renders with Button SM 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-jEsDcK krxMBR"
    >
      <div
        className="sc-kOZHUs eALEOy"
      >
        <div
          className="sc-chuuOD feVbyd"
        >
          <button
            className="sc-LoTwT kKGdKa"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-inRwDn gWiyjT"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-jEsDcK krxMBR"
    >
      <div
        className="sc-kOZHUs eALEOy"
      >
        <div
          className="sc-chuuOD feVbyd"
        >
          <button
            className="sc-LoTwT kKGdKa"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-inRwDn gWiyjT"
            />
          </button>
        </div>
        <div
          className="sc-chuuOD feVbyd"
        >
          <button
            className="sc-LoTwT doNUDN"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-inRwDn gWiyjT"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-jEsDcK krxMBR"
    >
      <div
        className="sc-kOZHUs eALEOy"
      >
        <div
          className="sc-chuuOD feVbyd"
        >
          <button
            className="sc-LoTwT kKGdKa"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-inRwDn gWiyjT"
            />
          </button>
        </div>
        <div
          className="sc-chuuOD feVbyd"
        >
          <button
            className="sc-LoTwT doNUDN"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-inRwDn gWiyjT"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-chuuOD feVbyd"
      >
        <button
          className="sc-LoTwT crnskb"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-inRwDn gWiyjT"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-jEsDcK krxMBR"
    >
      <div
        className="sc-kOZHUs eALEOy"
      >
        <div
          className="sc-chuuOD feVbyd"
        >
          <button
            className="sc-LoTwT kKGdKa"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-inRwDn gWiyjT"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-chuuOD feVbyd"
      >
        <button
          className="sc-LoTwT crnskb"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-inRwDn gWiyjT"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-jEsDcK krxMBR"
    >
      <div
        className="sc-kOZHUs eALEOy"
      >
        <div
          className="sc-chuuOD feVbyd"
        >
          <button
            className="sc-LoTwT doNUDN"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-inRwDn gWiyjT"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-jEsDcK krxMBR"
    >
      <div
        className="sc-kOZHUs eALEOy"
      >
        <div
          className="sc-chuuOD feVbyd"
        >
          <button
            className="sc-LoTwT doNUDN"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-inRwDn gWiyjT"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-chuuOD feVbyd"
      >
        <button
          className="sc-LoTwT crnskb"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-inRwDn gWiyjT"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;
